data/derived/sp14/progs/unify/prog2131.ml.out
Characters 8-28:
  let _ = (List.combine [] [])
          ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       This is not a function; it cannot be applied.
